--- a/runtime/themes/catppuccin.toml
+++ b/runtime/themes/catppuccin.toml
@@ -35,7 +35,7 @@ label = "peach"
 
 "diff.plus" = "#35bf86"
 "diff.minus" = "#f22c86"
-"diff.delta" = "delta"
+"diff.delta" = "#6F44F0"
 
 "ui.background" = { bg = "black_2" }
 "ui.linenr" = { fg = "gray_0" }
@@ -62,10 +62,10 @@ label = "peach"
 
 diagnostic = { modifiers = ["underlined"] }
 
-warning = "lightning"
-error = "apricot"
-info = "delta"
-hint = "silver"
+warning = "peach"
+error = "maroon"
+info = "blue"
+hint = "lavender"
 
 [palette]
 flamingo = "#F2CDCD"
@@ -91,8 +91,3 @@ gray_2 = "#C3BAC6"
 white = "#D9E0EE"
 lavender = "#C9CBFF"
 rosewater = "#F5E0DC"
-
-silver = "#c0c0c0"
-apricot = "#f47868"
-lightning = "#ffcd1c"
-delta = "#6f44f0"
