--- a/helix-core/Cargo.toml
+++ b/helix-core/Cargo.toml
@@ -18,6 +18,7 @@ integration = []
 helix-loader = { version = "0.6", path = "../helix-loader" }
 
 ropey = { version = "1.5", default-features = false, features = ["simd"] }
+str_indices = "0.4.0"
 smallvec = "1.9"
 smartstring = "1.0.1"
 unicode-segmentation = "1.9"
