feat(tree-sitter): :sparkles: add go template support (#3091)
* feat(tree-sitter): :sparkles: add go template support

* fix(tree-sitter): :bug: go template highlight scope selectors

* chore(tree-sitter): :wrench: update go template grammar commit

--- a/languages.toml
+++ b/languages.toml
@@ -286,6 +286,20 @@ name = "gomod"
 source = { git = "https://github.com/camdencheek/tree-sitter-go-mod", rev = "e8f51f8e4363a3d9a427e8f63f4c1bbc5ef5d8d0" }
 
 [[language]]
+name = "gotmpl"
+scope = "source.gotmpl"
+injection-regex = "gotmpl"
+file-types = ["gotmpl"]
+roots = []
+comment-token = "//"
+language-server = { command = "gopls" }
+indent = { tab-width = 2, unit = " " }
+
+[[grammar]]
+name = "gotmpl"
+source = { git = "https://github.com/dannylongeuay/tree-sitter-go-template", rev = "395a33e08e69f4155156f0b90138a6c86764c979" }
+
+[[language]]
 name = "gowork"
 scope = "source.gowork"
 injection-regex = "gowork"
