--- a/languages.toml
+++ b/languages.toml
@@ -424,6 +424,18 @@ name = "html"
 source = { git = "https://github.com/tree-sitter/tree-sitter-html", rev = "d93af487cc75120c89257195e6be46c999c6ba18" }
 
 [[language]]
+name = "htmldjango"
+scope = "source.htmldjango"
+injection-regex = "htmldjango"
+file-types = ["html"]
+roots = ["manage.py"]
+indent = { tab-width = 2, unit = "  " }
+
+[[grammar]]
+name = "htmldjango"
+source = { git = "https://github.com/interdependence/tree-sitter-htmldjango", rev = "184a50456186c2ff49b9b410f7060a176e2a3080" }
+
+[[language]]
 name = "python"
 scope = "source.python"
 injection-regex = "python"
