--- a/languages.toml
+++ b/languages.toml
@@ -455,6 +455,22 @@ name = "nickel"
 source = { git = "https://github.com/nickel-lang/tree-sitter-nickel", rev = "9d83db400b6c11260b9106f131f93ddda8131933" }
 
 [[language]]
+name = "nim"
+scope = "source.nim"
+injection-regex = "nim"
+file-types = ["nim", "nims"]
+shebangs = ["nim"]
+roots = []
+auto-format = true
+comment-token = "#"
+language-server = { command = "nimlangserver" }
+indent = { tab-width = 2, unit = " " }
+
+[[grammar]]
+name = "nim"
+source = { git = "https://github.com/aMOPel/tree-sitter-nim", rev = "d8cc0eaa4ba02685690ebe014d7c808cc1f8c789" }
+
+[[language]]
 name = "nix"
 scope = "source.nix"
 injection-regex = "nix"
