fix: respect ign for tstp, fix #3321

--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -43,6 +43,7 @@ signal-hook = "0.3"
 tokio-stream = "0.1"
 futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
 arc-swap = { version = "1.5.1" }
+libc = "0.2"
 
 # Logging
 fern = "0.6"
