Theme Related Fixes
- Replace "text" with "ui.text" in rose_pine* themes
- Change "attributes" to "attribute" in many included themes
- Document "attribute", "property" and "punctuation.special" in the theme section of the book.
- Remove "variable.function" from the documentation: it doesn't appear to exist in any highlights.scm.
- Remove "path" from snazzy; maybe it should be string.special.path?

--- a/runtime/themes/base16_transparent.toml
+++ b/runtime/themes/base16_transparent.toml
@@ -28,7 +28,7 @@
 "variable" = "light-red"
 "constant.numeric" = "yellow"
 "constant" = "yellow"
-"attributes" = "yellow"
+"attribute" = "yellow"
 "type" = "light-yellow"
 "string"  = "light-green"
 "variable.other.member" = "green"
