--- a/runtime/themes/pop-dark.toml
+++ b/runtime/themes/pop-dark.toml
@@ -43,7 +43,7 @@ special = { fg = 'orangeW' }
 operator = { fg = 'orangeY' }
 property = { bg = 'blueH' }
 attribute = { fg = 'orangeL' }
-attributes = { fg = 'orangeL' }
+attribute = { fg = 'orangeL' }
 namespace = { fg = 'orangeL' }
 'type' = { fg = 'redH' }
 'type.builtin' = { fg = 'orangeL' }
