--- a/runtime/themes/snazzy.toml
+++ b/runtime/themes/snazzy.toml
@@ -8,6 +8,7 @@
 "operator" = { fg = "magenta" }
 "punctuation" = { fg = "foreground" }
 "string" = { fg = "yellow" }
+"string.special.path" = { fg = "blue" }
 "string.regexp" = { fg = "red" }
 "tag" = { fg = "magenta" }
 "type" = { fg = "cyan", modifiers = ["italic"] }
