--- a/helix-core/Cargo.toml
+++ b/helix-core/Cargo.toml
@@ -29,6 +29,7 @@ tree-sitter = "0.20"
 once_cell = "1.13"
 arc-swap = "1"
 regex = "1"
+globset = "0.4.9"
 
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
