add esdl language support

--- a/languages.toml
+++ b/languages.toml
@@ -1653,3 +1653,17 @@ indent = { tab-width = 2, unit = "  " }
 [[grammar]]
 name = "task"
 source = { git = "https://github.com/alexanderbrevig/tree-sitter-task", rev = "f2cb435c5dbf3ee19493e224485d977cb2d36d8b" }
+
+[[language]]
+name = "esdl"
+scope = "source.esdl"
+injection-regex = "esdl"
+file-types = ["esdl"]
+comment-token = "#"
+indent = { tab-width = 2, unit = "  " }
+roots = ["edgedb.toml"]
+
+[[grammar]]
+name ="esdl"
+# source = { git = "https://github.com/greym0uth/tree-sitter-esdl", rev = "9b7fa6c7f59738f6aa9e11ee18feb71b00045ea6" }
+source = { path = "/Users/grey/Development/oss/tree-sitter-esdl" }
