--- a/runtime/themes/boo_berry.toml
+++ b/runtime/themes/boo_berry.toml
@@ -34,7 +34,7 @@
 "ui.cursor.insert" = { fg = "berry", bg = "mint" }
 "ui.linenr" = { fg = "berry_desaturated" }
 "ui.linenr.selected" = { fg = "lilac" }
-"ui.cursorline" = { fg = "lilac", bg = "berry_saturated" }
+"ui.cursorline" = { fg = "lilac", bg = "berry_dim" }
 "ui.statusline" = { fg = "lilac", bg = "berry_saturated" }
 "ui.statusline.inactive" = { fg = "berry_desaturated", bg = "berry_saturated" }
 "ui.popup" = { fg = "lilac", bg = "berry_saturated" }
@@ -46,7 +46,7 @@
 "ui.menu.selected" = { fg = "mint", bg = "berry_saturated" }
 "ui.selection" = { bg = "berry_saturated" }
 "ui.virtual.whitespace" = { fg = "berry_desaturated" }
-"ui.virtual.ruler" = { bg ="berry_desaturated" }
+"ui.virtual.ruler" = { bg ="berry_dim" }
 
 "diff.plus" = { fg = "mint" }
 "diff.delta" = { fg = "gold" }
@@ -60,6 +60,7 @@
 
 [palette]
 berry = "#3A2A4D"
+berry_dim = "#47345E"
 berry_saturated = "#2B1C3D"
 berry_desaturated = "#886C9C"
 bubblegum = "#D678B5"
