--- a/runtime/themes/papercolor-light.toml
+++ b/runtime/themes/papercolor-light.toml
@@ -23,6 +23,12 @@
 "ui.menu.selected" = {bg = "selection_background", fg="selection_foreground"}
 
 "markup.heading" = { fg = "bright2", modifiers = ["bold"] }
+"markup.heading.1" = { fg = "bright2", modifiers = ["bold"] }
+"markup.heading.2" = { fg = "bright4", modifiers = ["bold"] }
+"markup.heading.3" = { fg = "bright3", modifiers = ["bold"] }
+"markup.heading.4" = { fg = "bright4", modifiers = ["bold"] }
+"markup.heading.5" = { fg = "bright4", modifiers = ["bold"] }
+"markup.heading.6" = { fg = "bright4", modifiers = ["bold"] }
 "markup.list" = "regular4"
 "markup.bold" = { fg = "foreground", modifiers = ["bold"] }
 "markup.italic" = { modifiers = ["italic"] }
