nix: fix indent and use alejandra
Align indents to the way alejandra formats, and format automatically on
save to keep the two in sync.

--- a/languages.toml
+++ b/languages.toml
@@ -478,6 +478,8 @@ roots = []
 comment-token = "#"
 language-server = { command = "rnix-lsp" }
 indent = { tab-width = 2, unit = "  " }
+auto-format = true
+formatter = { command = "alejandra", args = ["-q"] }
 
 [[grammar]]
 name = "nix"
