--- a/helix-view/Cargo.toml
+++ b/helix-view/Cargo.toml
@@ -19,6 +19,7 @@ anyhow = "1"
 helix-core = { version = "0.6", path = "../helix-core" }
 helix-lsp = { version = "0.6", path = "../helix-lsp" }
 helix-dap = { version = "0.6", path = "../helix-dap" }
+helix-spell = { version = "0.1", path = "../helix-spell" }
 crossterm = { version = "0.25", optional = true }
 
 # Conversion traits
