--- a/helix-term/Cargo.toml
+++ b/helix-term/Cargo.toml
@@ -30,6 +30,7 @@ helix-view = { version = "0.6", path = "../helix-view" }
 helix-lsp = { version = "0.6", path = "../helix-lsp" }
 helix-dap = { version = "0.6", path = "../helix-dap" }
 helix-loader = { version = "0.6", path = "../helix-loader" }
+helix-plugin = { version = "0.6", path = "../helix-plugin" }
 
 anyhow = "1"
 once_cell = "1.14"
