chore(ci): set `profile.release.strip = true` in the release CI workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,6 +133,14 @@ jobs:
           command: test
           args: --release --locked --target ${{ matrix.target }} --workspace
 
+      - name: Set profile.release.strip = true
+        shell: bash
+        run: |
+          cat >> .cargo/config.toml <<EOF
+          [profile.release]
+          strip = true
+          EOF
+
       - name: Build release binary
         uses: actions-rs/cargo@v1
         with:
