--- a/helix-spell/Cargo.toml
+++ b/helix-spell/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "helix-spell"
-version = "0.1.0"
+version = "0.6.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 hunspell-rs = "0.4.0"
+log = "0.4"
