--- a/helix-view/Cargo.toml
+++ b/helix-view/Cargo.toml
@@ -20,6 +20,7 @@ helix-core = { version = "0.6", path = "../helix-core" }
 helix-loader = { version = "0.6", path = "../helix-loader" }
 helix-lsp = { version = "0.6", path = "../helix-lsp" }
 helix-dap = { version = "0.6", path = "../helix-dap" }
+helix-spell = { version = "0.6", path = "../helix-spell" }
 crossterm = { version = "0.25", optional = true }
 
 # Conversion traits
